--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,9 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:wear:27.1.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    // https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-android
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5'
     compileOnly 'com.google.android.wearable:wearable:2.3.0'
 }
